Anpassung composer.json

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,6 @@
     "name": "meapgmbh/zf2-modules",
     "description": "This is a composer test",
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=5.3.0"
     }
 }
