--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,6 @@
     "description": "This is a composer test",
     "require": {
         "php": ">=5.3.0",
-	"svycka/sv-images": "dev-master"
+	"samsonasik/redirect-handler-module": "dev-master"
     }
 }
