requirements erstmal wieder entfernt.

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "meapgmbh/zf2-modules",
     "description": "This is a composer test",
     "require": {
-        "php": ">=5.3.0",
-	"samsonasik/redirect-handler-module": "dev-master"
+        "php": ">=5.3.0"
     }
 }
